# src/loyalty/presentation/web/flask_api/client.py
@@ -3,15 +3,15 @@ from flask import Blueprint, Response, jsonify, request
 
 from loyalty.application.client.create import ClientForm, CreateClient
 from loyalty.application.client.read import ReadClient
-from loyalty.presentation.web.flask_api.serializer import serializer
+from loyalty.presentation.web.serializer import serializer
 
 client = Blueprint("client", __name__)
 
 
 @client.route("/", methods=["POST"], strict_slashes=False)
 def create_client(*, interactor: FromDishka[CreateClient]) -> Response:
-    result = interactor.execute(ClientForm(**request.get_json()))
-    return jsonify(serializer.dump(result))
+    interactor.execute(ClientForm(**request.get_json()))
+    return Response(status=204)
 
 
 @client.route("/", methods=["GET"], strict_slashes=False)
